--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="https://github.com/elenalao" class="social github">Github</a>
       </li>
     </ul>
-    <p class="copyright">Copyright &copy 2023, Elena LAO</p>
+    <p class="copyright">Copyright &copy; 2023, Elena LAO</p>
   </footer>
 </body>
 
